Fix: text-align and slider animation

--- a/styles/slider.css
+++ b/styles/slider.css
@@ -30,6 +30,8 @@
   background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
+  animation-duration: 20s;
+  animation-iteration-count: infinite;
 }
 
 .dots {
